--- a/questions.html
+++ b/questions.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link href="C:/Users/ideal/Desktop/New folder/style.css" type="text/css" rel="stylesheet">
+<link href="style.css" type="text/css" rel="stylesheet">
 <style>
 div#test{ border:#000 1px solid; padding:10px 40px 40px 40px; }
 div#test1{ border:#000 1px solid; padding:10px 40px 40px 40px; }
